@@ -33,6 +33,9 @@ if [ X"${DISABLE_WEB_SERVER}" != X'YES' ]; then
         export DIALOG_SELECTABLE_SOGO='YES'
     fi
 
+    # SOGo team doesn't offer binary packages for Ubuntu 18.10 (yet).
+    [ X"${DISTRO_CODENAME}" == X'cosmic' ] && export DIALOG_SELECTABLE_SOGO='NO'
+
     if [ X"${DISTRO}" == X'OPENBSD' ]; then
         # OpenBSD doesn't have 'libuuid' which required by netdata
         export DIALOG_SELECTABLE_NETDATA='NO'
