@@ -57,7 +57,9 @@ clamav_config()
 
     # Enable AllowSupplementaryGroups
     perl -pi -e 's/^(AllowSupplementaryGroups.*)/#${1}/' ${CLAMD_CONF}
-    if [ X"${DISTRO_CODENAME}" != X'stretch' -a X"${DISTRO_CODENAME}" != X'bionic' ]; then
+    if [ X"${DISTRO_CODENAME}" != X'stretch' \
+        -a X"${DISTRO_CODENAME}" != X'bionic' \
+        -a X"${DISTRO_CODENAME}" != X'cosmic' ]; then
         echo 'AllowSupplementaryGroups true' >> ${CLAMD_CONF}
     fi
 
